tests/NormalTests/paczka1/fuzzy1/26204387.err
Error in line 11: GfDBhl S48 6,1
Error in line 13: S48 A259 56,9
Error in line 25: I0zA9O4 A259 71,4
Error in line 21: lMGBAKHo2vu A259 80,2
Error in line 27: I0zA9O4 S48 37,6
Error in line 29: bTcKIyDU S80 58,5
Error in line 35: bTcKIyDU A716 69,1
